--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ECommerceMVC
-@using ECommerceMVC.Models
+@using ECommerceMVC.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
