--- a/Views/Auth/SignIn.cshtml
+++ b/Views/Auth/SignIn.cshtml
@@ -3,16 +3,8 @@
     Layout = "_Layout";
 }
 
-<div class="signup">
+<div class="signin">
     <form method="post">
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Full Name</label>
-            <input name="Name" type="text" class="form-control" id="exampleInputText" aria-describedby="textHelp">
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Username</label>
-            <input name="Username" type="text" class="form-control" id="exampleInputUserName" aria-describedby="usernameHelp">
-        </div>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input name="Email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -22,6 +14,6 @@
             <label for="exampleInputPassword1" class="form-label">Password</label>
             <input name="Password" type="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Sign In</button>
     </form>
 </div>
