--- a/Views/Auth/SignIn.cshtml
+++ b/Views/Auth/SignIn.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Sign In";
     Layout = "_Layout";
 }
 
@@ -16,10 +16,15 @@
         </div>
         <button type="submit" class="btn btn-primary">Sign In</button>
     </form>
-    @if (ViewBag.Error is not null)
-    {
-        <div>
-            <p>@ViewBag.Error</p>
+    <div class="position-fixed top-0 start-50 translate-middle-x p-3" style="z-index: 11">
+        <div id="liveToast" class="toast bg-white @(ViewBag.Error == null ? "hide" : "show")" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto text-danger">Error!</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                <p>@ViewBag.Error</p>
+            </div>
         </div>
-    }
+    </div>
 </div>
