--- a/Views/Auth/SignUp.cshtml
+++ b/Views/Auth/SignUp.cshtml
@@ -24,10 +24,15 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    @if(ViewBag.Error is not null)
-    {
-        <div class="text-error">
-            <p>@ViewBag.Error</p>
+    <div class="position-fixed top-0 start-50 translate-middle-x p-3" style="z-index: 11">
+        <div id="liveToast" class="toast bg-white @(ViewBag.Error == null ? "hide" : "show")" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto text-danger">Error!</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                <p>@ViewBag.Error</p>
+            </div>
         </div>
-    }
+    </div>
 </div>
